# CUtils

./: .gitignore  CMakeLists.txt  README.md
include/: cutils.h
src/: constants.h  datatypes.h  stack.c  stack.h  strutils.c
src/headers/: stack.h  strutils.h
src/include/: cutils.h
test/: CMakeLists.txt  test.c
